--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <img src="/images/heroImg.jpg" alt="" class="">
         </div>
         <div class="container">
-            <div class="news-list"></div>
+            <div class="news-list">
+                <div id="loading-indicator">Loading...</div>
+            </div>
             <div class="pagination">
                 <button id="prev-btn">Previous</button>
                 <button id="next-btn">Next</button>
